# omstu-ml-4

./: .gitignore  index.html  main.py  pyproject.toml  ruff.toml
lab-0/: planets.html  planets.py  taxi.html  taxi.py
lab-0/__marimo__/: taxi.ipynb
lab-0/__marimo__/session/: planets.py.json  taxi.py.json
lab-1/: taxi.py
lab-2/: planets.py
lab-2/__marimo__/session/: planets.py.json
lab-3/: decision-trees.py
lab-3/__marimo__/session/: decision-trees.py.json
lab-4/: clustering.py
lab-4/__marimo__/session/: clusterization.py.json
lab-5/: dimensionality-reduction.py
lab-5/__marimo__/session/: dimensionality-reduction.py.json
models/: best_boosting_model.joblib  best_classic_model.joblib
rgr/: save_best_models.py  streamlit_app.py
rgr/.streamlit/: secrets.toml.example
rgr/__marimo__/: save_best_models.html  save_best_models.ipynb
rgr/__marimo__/session/: save_best_models.py.json  save_models.py.json
rgr/app_pages/: dataset_info.py  prediction.py
rgr/pages/: developer_info.py  prediction.py  visualizations.py
