[project]
name = "omstu-ml-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "marimo>=0.20.4",
    "matplotlib>=3.7.5",
    "numpy>=1.26.4",
    "optuna>=4.7.0",
    "optuna-integration>=4.7.0",
    "pandas>=2.1.4",
    "pycaret>=3.3.2",
    "scikit-learn>=1.4.2",
    "scipy>=1.11.4",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.7",
    "xgboost>=3.2.0",
]
